[package]
name = "pnmseam"
version = "0.1.0"
authors = ["Elf M. Sternberg <elf.sternberg@gmail.com>"]
edition = "2018"
license = "MPL-2.0+"
description = "Seam carving for Rust"
repository = "https://github.com/elfsternberg/pnmseam"
readme = "./README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
square_root = []

[dependencies]
itertools = "0.8.0"
clap = "2.33.0"
image = "0.22.0"
failure = "0.1.5"
num-traits = "0.2.8"
crossbeam = "0.7.2"
num_cpus = "1.0.0"

[dev-dependencies]
tempfile = "3.0.7"
criterion = "0.2"
assert_cmd = "0.11.0"
predicates = "1.0.0"
